--- a/6. DOM__advanced___menu/app.css
+++ b/6. DOM__advanced___menu/app.css
@@ -2,16 +2,47 @@ body {
     background-color: #223;
     color: white;
     font-family: sans-serif;
+    margin: 0;
 }
 header,section,footer {
     border: 2px solid #445;
     padding: 20px;
     margin: 10px;
+    border-radius: 8px;
 }
 
 form label {
-    display: block;
+    display: flex;
+    align-items: center;
     background-color: #334;
     padding: 10px;
     margin: 5px;
+    border-radius: 5px;
 }
+
+form label img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 20%;
+    
+}
+
+form button {
+    background-color: #006a60;
+    color: rgb(3, 28, 72);     
+    padding: 8px 15px;
+    margin-top: 8px;
+    border-radius: 5px;   
+    border: none; 
+}
+
+form input {
+    margin: 5px 5px;
+    padding: 8px;
+    border-radius: 5px;
+    border: none;  
+    background-color: #4dbcb1;
+    color: rgb(0, 12, 30); 
+}
+
